--- a/index.html
+++ b/index.html
@@ -1,66 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto"
+      rel="stylesheet"
+    />
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <div class="top">
-            <div class="top__dateToday"></div>
-            <div class="top__weekDay"></div>
-            <div class="top__site"></div>
-            <div class="top__typeOfWeather"></div>
-            <div class="top__temperatureAverage"></div>
-            <div class="top__temperatureMinToMax"></div>
-            <div class="top__RainfallProb"></div>
+      <div class="top">
+        <div class="top__dateToday"></div>
+        <div class="top__weekDay"></div>
+        <div class="top__site"></div>
+        <div class="top__typeOfWeather"></div>
+        <div class="top__temperatureAverage"></div>
+        <div class="top__temperatureMinToMax"></div>
+        <div class="top__RainfallProb"></div>
+      </div>
+      <div class="bottom">
+        <div class="day1 days">
+          <div class="bottom__weekDay"></div>
+          <div class="bottom__date"></div>
+          <div class="bottom__temperatureAverage"></div>
+          <div class="bottom__RainfallProb"></div>
         </div>
-        <div class="bottom">
-            <div class="day1 days">
-                <div class="bottom__weekDay"></div>
-                <div class="bottom__date"></div>
-                <div class="bottom__temperatureAverage"></div>
-                <div class="bottom__RainfallProb"></div>
-            </div>
-            <div class="day2 days">
-                <div class="bottom__weekDay"></div>
-                <div class="bottom__date"></div>
-                <div class="bottom__temperatureAverage"></div>
-                <div class="bottom__RainfallProb"></div>
-            </div>
-            <div class="day3 days">
-                <div class="bottom__weekDay"></div>
-                <div class="bottom__date"></div>
-                <div class="bottom__temperatureAverage"></div>
-                <div class="bottom__RainfallProb"></div>
-            </div>
-            <div class="day4 days">
-                <div class="bottom__weekDay"></div>
-                <div class="bottom__date"></div>
-                <div class="bottom__temperatureAverage"></div>
-                <div class="bottom__RainfallProb"></div>
-            </div>
-            <div class="day5 days">
-                <div class="bottom__weekDay"></div>
-                <div class="bottom__date"></div>
-                <div class="bottom__temperatureAverage"></div>
-                <div class="bottom__RainfallProb"></div>
-            </div>
-            <div class="day6 days">
-                <div class="bottom__weekDay"></div>
-                <div class="bottom__date"></div>
-                <div class="bottom__temperatureAverage"></div>
-                <div class="bottom__RainfallProb"></div>
-            </div>
+        <div class="day2 days">
+          <div class="bottom__weekDay"></div>
+          <div class="bottom__date"></div>
+          <div class="bottom__temperatureAverage"></div>
+          <div class="bottom__RainfallProb"></div>
         </div>
+        <div class="day3 days">
+          <div class="bottom__weekDay"></div>
+          <div class="bottom__date"></div>
+          <div class="bottom__temperatureAverage"></div>
+          <div class="bottom__RainfallProb"></div>
+        </div>
+        <div class="day4 days">
+          <div class="bottom__weekDay"></div>
+          <div class="bottom__date"></div>
+          <div class="bottom__temperatureAverage"></div>
+          <div class="bottom__RainfallProb"></div>
+        </div>
+        <div class="day5 days">
+          <div class="bottom__weekDay"></div>
+          <div class="bottom__date"></div>
+          <div class="bottom__temperatureAverage"></div>
+          <div class="bottom__RainfallProb"></div>
+        </div>
+        <div class="day6 days">
+          <div class="bottom__weekDay"></div>
+          <div class="bottom__date"></div>
+          <div class="bottom__temperatureAverage"></div>
+          <div class="bottom__RainfallProb"></div>
+        </div>
+      </div>
     </div>
-
-</body>
+  </body>
 </html>
